# hive

./: .gitignore  base.py  dev-requirements.txt  justfile  player.py  pyproject.toml  requirements.txt  ruff.toml  runner.py  strip.py
images/: ant.xcf  antRed.xcf  bee.xcf  beetle.xcf  grasshopper.xcf  spider.xcf
src/hive/: __main__.py  base.py  player.py
