[tool.poetry]
name = "hive"
version = "0.1.0"
description = ""
authors = ["Maneren <49210777+Maneren@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.8"
mypy = "^1.7.1"

[tool.poetry.scripts]
hive = "hive.__main__:main"

[tool.ruff]
select = ["E", "F", "N", "ANN", "ARG", "UP"]
ignore = ["ANN101", "ANN102", "ANN401"]
exclude = ["base.py"]
target-version = "py39"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
